--- a/index.html
+++ b/index.html
@@ -1,40 +1,28 @@
 <!DOCTYPE html>
-<html lang="zh">
+<html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>擲骰子互動抽獎工具</title>
+  <title>骰子遊戲</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <div class="game-container">
     <h1>擲骰子互動抽獎工具</h1>
-
-    <!-- 玩家區域 -->
     <div class="dice-container">
-      <div class="dice-group">
-        <h2>玩家骰子：</h2>
-        <div class="dice" id="player-dice-1"></div>
-        <div class="dice" id="player-dice-2"></div>
-      </div>
-      <h3 id="player-score">總分：0</h3>
+      <h2>玩家骰子：</h2>
+      <div id="playerDice" class="dice-group"></div>
+      <h2 id="playerScore">總分：</h2>
     </div>
-
-    <!-- 關主區域 -->
     <div class="dice-container">
-      <div class="dice-group">
-        <h2>關主骰子：</h2>
-        <div class="dice" id="host-dice-1"></div>
-        <div class="dice" id="host-dice-2"></div>
-      </div>
-      <h3 id="host-score">總分：0</h3>
+      <h2>關主骰子：</h2>
+      <div id="hostDice" class="dice-group"></div>
+      <h2 id="hostScore">總分：</h2>
     </div>
-
-    <!-- 結果與按鈕 -->
     <h3 id="message"></h3>
-    <button id="roll-button">擲骰子</button>
+    <button onclick="rollDice()">擲骰子</button>
   </div>
-
   <script src="script.js"></script>
 </body>
 </html>
+
