--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
     <h3 id="message"></h3>
     <button onclick="rollDice()">擲骰子</button>
   </div>
+
+  <!-- 確保 script.js 放在 body 結束標籤前 -->
   <script src="script.js"></script>
 </body>
 </html>
-
