--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <div class="game-container">
-    <h1>擲骰子互動抽獎工具</h1>
+    <h1>擲骰子比大小抽獎工具</h1>
     <div class="dice-container">
       <h2>玩家骰子：</h2>
       <div id="playerDice" class="dice-group"></div>
